Apr 12, 2022
  improved logging

Mar 25, 2022
  tweaked up logging

Jan 18, 2022
  updated dependencies to avoid log4j vulnerabilities

Dec 20, 2021
  updated Oracle jdbc dependency

Dec 17, 2021
  upgraded log4j to avoid zero-day exploit

Apr 10, 2020
  updated jar dependencies

Jul 17, 2019
  simplified logic by getting rid of PipelineManager framework

Sep 28, 2018
  moved from subversion to github

Feb 14, 2018
  fixed bug in partial pos matching query

Feb 9, 2018
  extended the partial matching

Oct 25, 2017
  BioMart discontinued attribute 'status'

Jun 28, 2017
  fixed BioMart attributes for rat: 'rgd' --> 'rgd_id'

Nov 23, 2016
  migrated build system from ANT to GRADLE
  replaced ENTREZ with NCBI GENE

Aug 18, 2016
  updated links to NCBI to use HTTPS instead of HTTP -- per RGDD1254

Nov 12, 2015
  updated url for Ensembl BioMart; updated jars

Nov 26, 2014
  Ensembl BioMart retired some of the attributes; updated the code

July 9, 2013
  fixed data parser so it can handle malformed incoming rgd_ids



BIOMART USAGE:
--------------


This is the url to download the data