@@ -13,7 +13,7 @@ apply plugin: 'application'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 mainClassName = 'edu.mcw.rgd.dataload.EnsemblLoader'
-String myAppName = 'Ensembl'
+String myAppName = 'ensembl-pipeline'
 
 project.archivesBaseName = myAppName
 
@@ -24,12 +24,12 @@ repositories {
 dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
     compile 'commons-net:commons-net:3.7'
-    compile 'org.apache.httpcomponents:httpclient:4.5.11'
+    compile 'org.apache.httpcomponents:httpclient:4.5.12'
     compile 'org.apache.logging.log4j:log4j-api:2.17.2'
     compile 'org.apache.logging.log4j:log4j-core:2.17.2'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
-    compile 'org.springframework:spring-beans:5.1.6.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.6.RELEASE'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.9.0.0'
+    compile 'org.springframework:spring-beans:5.1.7.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.7.RELEASE'
     compile 'com.io7m.xom:xom:1.2.10'
 
     compile fileTree(dir: 'lib', include: '*.jar')
