@@ -9,11 +9,11 @@ if [ "$HOST" == "REED" ]; then
   EMAIL_LIST="mtutaj@mcw.edu"
 fi
 
-$APPDIR/run.sh -species Rat
+$APPDIR/_run.sh -species Rat
 cat $APPDIR/logs/summary.log > $APPDIR/all.log
-$APPDIR/run.sh -species Mouse
+$APPDIR/_run.sh -species Mouse
 cat $APPDIR/logs/summary.log >> $APPDIR/all.log
-$APPDIR/run.sh -species Human
+$APPDIR/_run.sh -species Human
 cat $APPDIR/logs/summary.log >> $APPDIR/all.log
 
 mailx -s "[$HOST] Ensembl pipeline" $EMAIL_LIST < $APPDIR/all.log
